--- a/.gitignore
+++ b/.gitignore
@@ -4,22 +4,39 @@
 # Log file
 *.log
 
+HELP.md
+target/
+!.mvn/wrapper/maven-wrapper.jar
+!**/src/main/**/target/
+!**/src/test/**/target/
+
+### STS ###
+.apt_generated
+.classpath
+.factorypath
+.project
+.settings
+.springBeans
+.sts4-cache
+
 # Maven
 target/
 
-# Gradle
-.gradle
-**/build/
-!src/**/build/
-
-# IntelliJ idea
+### IntelliJ IDEA ###
+.idea
+*.iws
 *.iml
-.idea/
+*.ipr
 
-# Eclipse
-.settings/
-.classpath
-.project
+### NetBeans ###
+/nbproject/private/
+/nbbuild/
+/dist/
+/nbdist/
+/.nb-gradle/
+build/
+!**/src/main/**/build/
+!**/src/test/**/build/
 
 # VSCode
 .vscode/
